--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "^16.11.10",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.43.5",
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
+    "@types/react": "^17.0.37",
     "eslint": "7",
     "eslint-config-next": "12.0.4"
   }
